[package]
name = "orders"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clippy = { version = "0.0.302", optional = true }
clap = { version = "4.5.17", optional = true }
tokio-postgres = "0.7"
deadpool-redis = "0.10.1"
deadpool-postgres = "0.8.1" # Выбираем версию без дополнительных "features"
regex = "1.5"
hyper = { version = "0.14.10", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
validator = { version = "0.14", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.4", features = ["limit"] }
dotenv = "0.15"
redis = { version = "0.23", features = ["aio", "tokio-comp"] }

[dev-dependencies]
axum-test = "15.7.1"
tokio-test = "0.4.4"